Fix Filter Search Wrap

--- a/src/pages/Search/Components/FilterSearch/FilterSearch.css
+++ b/src/pages/Search/Components/FilterSearch/FilterSearch.css
@@ -1,6 +1,6 @@
 .filterSearchBar {
     width: 100%;
-    height: 30px;
+    height: fit-content;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -8,7 +8,8 @@
 
 .filterSearchChoice {
     flex: 1;
-    min-width: 0;
+    min-width: 80px;
+    height: 40px;
     text-align: center;
     cursor: pointer;
 }
